storage/innobase/fil/fil0fil.cc
@@ -6325,15 +6325,11 @@ fil_flush(
 {
 	mutex_enter(&fil_system->mutex);
 
-	fil_space_t*	space = fil_space_get_by_id(space_id);
-
-	if (!space || space->stop_new_ops) {
-		mutex_exit(&fil_system->mutex);
-
-		return;
+	if (fil_space_t* space = fil_space_get_by_id(space_id)) {
+		if (!space->is_stopping()) {
+			fil_flush_low(space);
+		}
 	}
-
-	fil_flush_low(space);
 
 	mutex_exit(&fil_system->mutex);
 }
@@ -6374,8 +6370,7 @@ fil_flush_file_spaces(
 	     space;
 	     space = UT_LIST_GET_NEXT(unflushed_spaces, space)) {
 
-		if (space->purpose == purpose && !space->stop_new_ops) {
-
+		if (space->purpose == purpose && !space->is_stopping()) {
 			space_ids[n_space_ids++] = space->id;
 		}
 	}
@@ -7276,12 +7271,13 @@ Used by background threads that do not necessarily hold proper locks
 for concurrency control.
 @param[in]	id	tablespace ID
 @param[in]	silent	whether to silently ignore missing tablespaces
-@return the tablespace, or NULL if missing or being deleted */
+@param[in]	for_io	whether to look up the tablespace while performing I/O
+			(possibly executing TRUNCATE)
+@return	the tablespace
+@retval	NULL if missing or being deleted or truncated */
 inline
 fil_space_t*
-fil_space_acquire_low(
-	ulint	id,
-	bool	silent)
+fil_space_acquire_low(ulint id, bool silent, bool for_io = false)
 {
 	fil_space_t*	space;
 
@@ -7294,7 +7290,7 @@ fil_space_acquire_low(
 			ib_logf(IB_LOG_LEVEL_WARN, "Trying to access missing"
 				" tablespace " ULINTPF ".", id);
 		}
-	} else if (space->stop_new_ops) {
+	} else if (!for_io && space->is_stopping()) {
 		space = NULL;
 	} else {
 		space->n_pending_ops++;
@@ -7309,22 +7305,24 @@ fil_space_acquire_low(
 Used by background threads that do not necessarily hold proper locks
 for concurrency control.
 @param[in]	id	tablespace ID
-@return the tablespace, or NULL if missing or being deleted */
+@param[in]	for_io	whether to look up the tablespace while performing I/O
+			(possibly executing TRUNCATE)
+@return	the tablespace
+@retval	NULL	if missing or being deleted or truncated */
 fil_space_t*
-fil_space_acquire(
-	ulint	id)
+fil_space_acquire(ulint id, bool for_io)
 {
-	return(fil_space_acquire_low(id, false));
+	return(fil_space_acquire_low(id, false, for_io));
 }
 
 /** Acquire a tablespace that may not exist.
 Used by background threads that do not necessarily hold proper locks
 for concurrency control.
 @param[in]	id	tablespace ID
-@return the tablespace, or NULL if missing or being deleted */
+@return	the tablespace
+@retval	NULL if missing or being deleted */
 fil_space_t*
-fil_space_acquire_silent(
-	ulint	id)
+fil_space_acquire_silent(ulint id)
 {
 	return(fil_space_acquire_low(id, true));
 }
@@ -7332,8 +7330,7 @@ fil_space_acquire_silent(
 /** Release a tablespace acquired with fil_space_acquire().
 @param[in,out]	space	tablespace to release  */
 void
-fil_space_release(
-	fil_space_t*	space)
+fil_space_release(fil_space_t* space)
 {
 	mutex_enter(&fil_system->mutex);
 	ut_ad(space->magic_n == FIL_SPACE_MAGIC_N);
@@ -7351,8 +7348,7 @@ If NULL, use the first fil_space_t on fil_system->space_list.
 @return pointer to the next fil_space_t.
 @retval NULL if this was the last*/
 fil_space_t*
-fil_space_next(
-	fil_space_t*	prev_space)
+fil_space_next(fil_space_t* prev_space)
 {
 	fil_space_t*		space=prev_space;
 
@@ -7375,8 +7371,8 @@ fil_space_next(
 		fil_ibd_create(), or dropped, or !tablespace. */
 		while (space != NULL
 			&& (UT_LIST_GET_LEN(space->chain) == 0
-				|| space->stop_new_ops
-				|| space->purpose != FIL_TABLESPACE)) {
+			    || space->is_stopping()
+			    || space->purpose != FIL_TABLESPACE)) {
 			space = UT_LIST_GET_NEXT(space_list, space);
 		}
 
